# LogScanner

./: CMakeLists.txt
src/: FileScanner.cpp  FileScanner.h  logscanner.cpp
